# adventOfCode

./: pyproject.toml
advent_of_code/cli/: __init__.py
advent_of_code/year2023/: day1.py  day2.py  day3.py  day4.py
docs/: README.md
docs/2023/: day1.md  day2.md  day3.md  day4.md  index.md
tests/: conftest.py
tests/data/2023/: day3_a.txt
tests/year2023/: test_day1.py  test_day2.py  test_day3.py  test_day4.py
