[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'advent-of-code'
version = '2023.3.3'
readme = 'docs/README.md'
dependencies = [
    'lark'
]

[project.optional-dependencies]
cli = [
    'typer[all]'
]
test = [
    'pytest'
]
dev = [
    'advent-of-code[cli,test]'
]

[project.scripts]
aoc-cli = 'advent_of_code.cli:run'
